--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -15,6 +15,34 @@
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
 
+<div class="navigation">
+    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+    <label for="navi-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+    </label>
+
+    <div class="navigation__background">&nbsp;</div>
+
+    <nav class="navigation__nav">
+        <ul class="navigation__list">
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your Benefits</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular Tours</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+            <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book Now</a></li>
+
+
+        </ul>
+
+
+
+
+    </nav>
+
+
+</div>
+
 <body>
     <header class="header">
         <div class="header__logo-box">
@@ -288,7 +316,7 @@
                         <form action="#" class="form">
                             <div class="u-margin-bottom-medium">
                                 <h2 class="heading-secondary">
-                                    Start booking now
+                                    Start booking now !
                                 </h2>
                             </div>
                             <div class="form__group">
@@ -299,6 +327,24 @@
                             <div class="form__group">
                                 <input type="email" class="form__input" placeholder="Email address" id="email" required>
                                 <label for="email" class="form__label">Email address</label>
+                            </div>
+
+                            <div class="form__group">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="small" name="size">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Small tour group
+                                    </label>
+                                </div>
+
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="large" name="size">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        Large tour group
+                                    </label>
+                                </div>
                             </div>
                         </form>
                     </div>
@@ -333,6 +379,26 @@
 
 
     </footer>
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
+                <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Interdum consectetur libero id faucibus nisl. Elit
+                    ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Purus viverra accumsan in nisl nisi
+                    scelerisque eu. Suscipit adipiscing bibendum est ultricies integer quis auctor.</p>
+
+                <a href="#" class="btn btn--green">Book Now</a>
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
