--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -54,7 +54,7 @@
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--gitanimated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
 
         </div>
     </header>
@@ -137,7 +137,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -173,7 +173,7 @@
                                     <p class="card__price-value">$297</p>
                                 </div>
 
-                                <a href="#" class="btn btn--white">Book now!</a>
+                                <a href="#popup" class="btn btn--white">Book now!</a>
                             </div>
                         </div>
 
@@ -210,7 +210,7 @@
                                         <p class="card__price-value">$497</p>
                                     </div>
 
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
 
@@ -247,7 +247,7 @@
                                             <p class="card__price-value">$897</p>
                                         </div>
 
-                                        <a href="#" class="btn btn--white">Book now!</a>
+                                        <a href="#popup" class="btn btn--white">Book now!</a>
                                     </div>
                                 </div>
                             </div>
@@ -379,19 +379,22 @@
 
 
     </footer>
-    <div class="popup">
+    <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
                 <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
                 <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
             </div>
             <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                 <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
                     booking</h3>
-                <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Interdum consectetur libero id faucibus nisl. Elit
-                    ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Purus viverra accumsan in nisl nisi
+                    ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Purus viverra accumsan in nisl
+                    nisi
                     scelerisque eu. Suscipit adipiscing bibendum est ultricies integer quis auctor.</p>
 
                 <a href="#" class="btn btn--green">Book Now</a>
